--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,6 +6,11 @@ on:
     branches:
       - main
       - 'feature/*'
+
+env:
+  MONGO_URI = ${{ vars.MONGO_URI }}
+  MONGO_USERNAME = ${{ vars.MONGO_INITDB_ROOT_USERNAME }}
+  MONGO_PASSWORD = ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
     
 jobs:
     unit-testing:
