--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   MONGO_URI: ${{ vars.MONGO_URI }}
-  MONGO_USERNAME: ${{ vars.MONGO_INITDB_ROOT_USERNAME }}
-  MONGO_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
+  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
 jobs:
     unit-testing:
