--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -8,7 +8,7 @@ on:
       - 'feature/*'
 
 env:
-  MONGO_URI: ${{ vars.MONGO_URI }}
+  MONGO_URI: 'mongodb+srv://alegnta88:0603t44LXtKFAJVp@cluster0.w38es.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
   MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
@@ -36,4 +36,3 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
-            
