--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - main
       - 'feature/*'
-      
 
 env:
   MONGO_URI: 'mongodb+srv://alegnta88:0603t44LXtKFAJVp@cluster0.w38es.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
@@ -14,9 +13,15 @@ env:
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
 jobs:
+
+  strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        node-version: [14, 16, 18]
+
     unit-testing:
         name: Unit Testing
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
