--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -41,3 +41,10 @@ jobs:
         with:
           name: Mocha-Test-Result
           path: test-results.xml
+        
+  containerization:
+    name: App Containerization
+    runs-on: ubuntu-latest  
+    steps: 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
