--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -48,3 +48,16 @@ jobs:
     steps: 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: alegnta/node-cicd-app:1.0
