--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -55,9 +55,9 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and Push Docker Image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: alegnta/node-cicd-app:1.0
+          tags: alegnta/node-cicd-app:latest
