--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -58,6 +58,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: . ./
           push: true
           tags: alegnta/node-cicd-app:latest
