--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -45,7 +45,12 @@ jobs:
   containerization:
     name: App Containerization
     runs-on: ubuntu-latest  
+
     steps: 
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
